--- a/package.json
+++ b/package.json
@@ -21,13 +21,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.3.4",
+    "geobuf": "^3.0.2",
     "next": "13.2.4",
+    "postgres": "^3.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.21.3",
     "@next/eslint-plugin-next": "^13.2.4",
+    "@types/geobuf": "^3.0.1",
     "@types/node": "^18.15.10",
     "@types/react": "18.0.32",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
@@ -41,6 +45,7 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "pg-connection-string": "^2.5.0",
     "typescript": "5.0.3"
   }
 }
