--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.14",
     "axios": "^1.3.4",
     "geobuf": "^3.0.2",
     "next": "13.2.4",
+    "postcss": "^8.4.21",
     "postgres": "^3.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwindcss": "^3.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.21.3",
