--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@turf/turf": "^6.5.0",
     "autoprefixer": "^10.4.14",
     "axios": "^1.3.4",
     "geobuf": "^3.0.2",
     "next": "13.2.4",
+    "ol": "^7.3.0",
     "postcss": "^8.4.21",
     "postgres": "^3.3.1",
     "react": "18.2.0",
@@ -36,7 +38,9 @@
     "@next/eslint-plugin-next": "^13.2.4",
     "@types/geobuf": "^3.0.1",
     "@types/node": "^18.15.10",
+    "@types/ol": "^7.0.0",
     "@types/react": "18.0.32",
+    "@types/react-dom": "^18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "babel-loader": "^9.1.2",
