--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "geobuf": "^3.0.2",
-    "next": "13.4.12",
-    "ol": "^7.4.0",
+    "next": "^13.5.6",
+    "ol": "^8.1.0",
     "postcss": "^8.4.27",
     "postgres": "^3.3.5",
     "react": "18.2.0",
@@ -35,11 +35,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.22.9",
-    "@next/eslint-plugin-next": "^13.4.12",
+    "@next/eslint-plugin-next": "^13.5.6",
     "@types/geobuf": "^3.0.1",
     "@types/node": "^20.4.8",
     "@types/ol": "^7.0.0",
-    "@types/react": "18.2.18",
+    "@types/react": "18.2.33",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "@typescript-eslint/parser": "^6.2.1",
@@ -47,12 +47,12 @@
     "eslint": "^8.46.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "^17.1.0",
-    "eslint-config-next": "^13.4.12",
+    "eslint-config-next": "^13.5.6",
     "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.33.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "pg-connection-string": "^2.6.2",
-    "typescript": "5.1.6"
+    "typescript": "5.2.2"
   }
 }
