--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nextjs-dimb",
   "version": "1.0.0",
-  "description": "Next.js DIMB",
+  "description": "Next.js DIMB API and Demo Map",
   "author": "Kerstin Huppenbauer <k.huppenbauer@web.de>",
   "license": "MIT",
   "keywords": [
@@ -17,40 +17,40 @@
     "build": "next build",
     "start": "next start",
     "typecheck": "tsc --noEmit",
-    "export": "next build && next export",
     "lint": "next lint"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.14",
-    "axios": "^1.4.0",
-    "geobuf": "^3.0.2",
-    "next": "^13.5.6",
-    "ol": "^8.1.0",
-    "postcss": "^8.4.31",
+    "@turf/turf": "^7.2.0",
+    "autoprefixer": "^10.4.20",
+    "axios": "^1.7.9",
+    "next": "^15.1.4",
+    "ol": "^10.2.1",
+    "postgres": "^3.4.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "^3.3.3"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.9",
-    "@next/eslint-plugin-next": "^13.5.6",
-    "@types/geobuf": "^3.0.1",
+    "@babel/core": "^7.26.0",
+    "@next/eslint-plugin-next": "^15.1.4",
     "@types/node": "^20.4.8",
     "@types/ol": "^7.0.0",
     "@types/react": "18.2.33",
     "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.2.1",
-    "@typescript-eslint/parser": "^6.2.1",
-    "babel-loader": "^9.1.3",
+    "@typescript-eslint/eslint-plugin": "^7.0.0",
+    "@typescript-eslint/parser": "^7.0.0",
+    "babel-loader": "^9.2.1",
     "eslint": "^8.46.0",
     "eslint-config-airbnb": "19.0.4",
-    "eslint-config-airbnb-typescript": "^17.1.0",
-    "eslint-config-next": "^13.5.6",
-    "eslint-plugin-import": "^2.28.0",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "^7.33.1",
+    "eslint-config-airbnb-typescript": "^18.0.0",
+    "eslint-config-next": "^15.1.4",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.3",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "pg-connection-string": "^2.6.2",
-    "typescript": "5.2.2"
+    "pg-connection-string": "^2.7.0",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.7.3",
+    "webpack": "^5.97.1"
   }
 }
